# libchaos

./: .agignore  .clang-format  .gitignore  .gitmodules  .travis.yml  ALGORITHMS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING  LICENSE  MAINTAINERS  README  README.md  RETTER.html  Retter.php  bootstrap.sh  hash  install.sh
Adler-32/: README.md  adler32.c
BLAKE/: Makefile  README.md  blake384.c  blake512.c
BSD/: README.md
CRC/: README.md  crc32.c
CityHash/: README.md
Damm/: README.md  damm.c
ECOH/: README.md
FNV/: README.md  fnv32.c
FSB/: README.md  fsb.c  fsb.h
Fletcher/: README.md  fletcher16.c  fletcher32.c
GOST/: README.md  gosttest.c
Grostl/: README.md
HAS-160/: README.md  has160.c
HAVAL/: README.md
JH/: README.md  jh_ref.h
Jenkins/: README.md
Luhn algorithm/: README.md
MD2/: README.md
MD4/: README.md
MD5/: README.md  md5.c
MD6/: README.md  md6_compress.c
MurmurHash/: README.md  murmurhash3_32.c
NCG/: README.md  makefile
NCG/src/: ncg.c
NCG/tests/: hash.c  random.c
Pearson/: README.md
Puzzle/: README.md
RIPEMD/: README.md  rmd160mc.c  rmd160mc.h
RTR0/: README.md  Retter.c  Retter.php
RadioGatun/: README.md  RG32-testvectors  RG64-testvectors  common.cpp  fastradiogatun.h  radiogatun.h
SHA-1/: README.md
SHA-2/: README.md
SHA-3/: README.md
SWIFFT/: README.md
SYSV/: README.md
SipHash/: README.md  makefile  siphash24.c
Skein/: README.md  SHA3api_ref.c  skein_block.c
Snefru/: README.md  snefru.c
Spectral/: README.md  genKAT.c
Tiger/: Makefile  README.md  sboxes.c  tiger.c
Verhoeff/: README.md
Verhoeff algorithm/: verhoeff.cpp
Whirlpool/: README.md  nessie.h
Zobrist/: README.md
algorithms/AES/: README
algorithms/Adler-32/: README  adler32.c
algorithms/B.B.S./: COPYING  Makefile  README  bbs.c
algorithms/BLAKE/: README  blake.h  blake224.c  blake256.c
algorithms/BSD/: README
algorithms/CRC/: README  crc16.c
algorithms/CityHash/: README
algorithms/Damm/: README
algorithms/ECOH/: README
algorithms/FNV/: README  fnv.h  fnv64.c
algorithms/FSB/: Makefile  README  Whirlpool.h  main.c  pi.h
algorithms/Fletcher/: README
algorithms/GOST/: Makefile  README  gostan.c  gosthash.c  gosthash.h
algorithms/Grostl/: README
algorithms/HAS-160/: README  has160.h
algorithms/HAVAL/: README
algorithms/ISAAC/: README
algorithms/JH/: README  jh_opt8.h
algorithms/Jenkins/: README  jenkins.c  jenkinstest.c
algorithms/Luhn/: README  luhn.c
algorithms/MD2/: README  md2.c
algorithms/MD4/: README  md4.c
algorithms/MD5/: README
algorithms/MD6/: README
algorithms/MT19937/: README
algorithms/MurmurHash/: README
algorithms/Pearson/: README  pearson.c
algorithms/RC4/: README
algorithms/RIPEMD/: README
algorithms/RSA/: README
algorithms/RadioGatun/: README  RG-inputstrings  common.h  fastradiogatun.c  fastradiogatun.macros  ref_main.cpp
algorithms/SHA-1/: README  sha1.c
algorithms/SHA-2/: README  sha256.c
algorithms/SHA-3/: README
algorithms/SWIFFT/: README
algorithms/SYSV/: README
algorithms/SipHash/: README  main.c
algorithms/Skein/: README  skein.c  skein.h  skein_port.h
algorithms/Snefru/: README
algorithms/Spectral/: README  shash.c  shash.h
algorithms/Tiger/: README  testtiger.c
algorithms/Verhoeff/: README
algorithms/Whirlpool/: README  Whirlpool.c
algorithms/Wichmann-Hill/: README
algorithms/Xorshift/: README
algorithms/Zobrist/: README  zobrist.js
algorithms/xxHash/: README
bookmarks/courses/: 52 Things People Should Know To Do Cryptography  A Graduate Course in Applied Cryptography  Advanced Topics in Cryptography  Berkeley's Computer Security  CRYPTO101 - Introductory Course  Cryptographic Right Answers from Thomas Ptacek  Cryptography and Cryptanalysis  Dan Boneh's Coursera Cryptography  Handbook of Applied Cryptography  Practical Aspects of Modern Cryptography  The Matasano Crypto Challenges  Theory and Practice of Cryptography Mini-Course
bookmarks/groups/: Hackerspaces  IACR  IETF  USENIX
bookmarks/libraries/: Botan  Bouncy Castle  CocoaSecurity  Crypto++  Data.HashFunction  HElib  Libgcrypt  NaCl  Nettle  PCLCrypto  RHash  RNCryptor  as3corelib  avr-crypto-lib  cryptlib  crypto-algorithms  cryptography  cryptojs  cryptonite  hmacsha1.js  javascript-crypto-library  jsHashes  libsodium  pandect  pycrypto  rbnacl  rust-crypto  sha3sum  sjcl
bookmarks/meetups/: ACNS  ASIACRYPT  CHES  CRYPTO  EUROCRYPT  FDTC  FSE  ICICS  INDOCRYPT  ITCS  PKC  RSA Conference  SAC  SPACE  TCC
bookmarks/people/: Adam Back  Adam Shostack  Adi Shamir  Alan Theodore Sherman  Andy Klapper  Ankur Tyagi  Anne Canteaut  Anton Stiglic  Antoon Bosselaers  Arnoud Engelfriet  Avrim Blum  Bart Preneel  Bennet Yee  Bob Jenkins  Brian LaMacchia  Bruce Schneier  Carl Ellison  Christian Cachin  Claude Crépeau  Clifford Neuman  Cunsheng Ding  D. J. Bernstein  Damien Doligez  Dan Boneh  Daniele Micciancio  David A. McGrew  David Chaum  David Wagner  Derek Atkins  Don Davis  Doug Stinson  Doug Tygar  Egor Homakov  Eli Biham  Eyal Kushilevitz  Frank Stajano  George Davida  Gilles Brassard  Giuseppe Persiano  Gordon B. Agnew  (+52 more)
bookmarks/tools/: Aircrack-ng  BackBox  Beautiful Soup  BlackArch  BozoCrack  Burp Suite  CapTipper  Construct  DHCPig  Dirtbags py-pcap  Evan's Debugger  Exefilter  Exomind  ExploitPack  Forensic Fuzzing Tools  FunkLoad  Fusil  Fuzzbox  GoogleHackMasterList  Hachoir  I2P  (+111 more)
cmake/: benchmark_header.cc  googletest_header.cc
docs/: Makefile  generators.html  genindex.html  index.html  installation.html  machines.html  objects.inv  quickstart.html  search.html  searchindex.js
examples/: benchmark_graph.cc  file_checksum.cc  graph.R  interface_chaos_machine.cc  interface_prng.cc  long_period_urandom.cc  normal_dist_diagram.cc  tests_library.cc  tests_testu01.cc  truely_random.cc
include/: chaos.h
src/: _sandbox.cpp  _testu01.cpp  analysis.cc  chaosdeep.cpp
tests/: b_engines.cc  b_generators.cc  t_engines.cc  t_generators.cc  t_machine.cc  t_mixins.cc  t_prng.cc
tools/: build.py  requirements.txt  template.html
xxHash/: README.md
(+38 files in other folders)
